tdf#72456: Support font embedding on macOS

With the previous commit, when we want the full font data we pass 0 for
table tag. This does not work with CoreText’s CTFontCopyTable(), we we
emulate it by using hb_face_builder to construct a full font from
individual font tables.

Change-Id: I0edb10982434872221466e9ec9ef9cd39087967a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/140831
Tested-by: Jenkins
Reviewed-by: خالد حسني <khaled@aliftype.com>